syntax = "proto3";
package kvs;

service KeyValueStore {
  rpc Insert(InsertRequest) returns (InsertResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message InsertRequest {
  string key = 1;
  string value = 2;
}

message InsertResponse {}

message DeleteRequest { string key = 1; }

message DeleteResponse {}
